# alexis

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.dev.txt  setup.cfg
.github/workflows/: analyse.yml  entrainement.yml  tests.yml
alexi/: __init__.py  analyse.py  annotate.py  api.py  cli.py  convert.py  crf.py  download.py  extract.py  format.py  index.py  json.py  label.py  link.py  models.py  pagernn.py  pdf2csv.py  reglements.py  search.py  segment.py  train_crf.py  types.py  wordvec.py  xml.py  yolo.py
alexi/cli/: __init__.py  convert.py  download.py  extract.py  index.py  search.py  segment.py  select.py
alexi/extraction/: .gitignore  csv2urba.py  rnn95.scaler.pkl  rnn95.vocab.json  rnn99.py  rnn99.scaler.pkl  rnn99.vocab.json  urbanisme.py
alexi/models/: rnn.json  rnn.pt  rnn_crf.json  rnn_crf.pt
alexi/recognize/: __init__.py  docling.py  yolo.py
alexis/: index.py  models.py  search.py
alexis/extraction/: urbanisme.py
data/: 00-2015-10-19-Reglement-1224-Plans-et-devis-Intercepteur-syphon-Usine-COMPLET_2.csv  00-2016-02-03-EEV-Reglement-1226-TECQ-V4.csv  00-2016-03-21-Reglement-1229-Refection-Habitat-COMPLET.csv  00-2016-03-21-Reglement-1230-PRR-2016-COMPLET.csv  00-2016-03-21-Reglement-1231-Travaux-refection-rue-Dube-COMPLET.csv  00-2016-04-18-Reglement-1232-Equipements-TP-COMPLET.csv  00-RGL-1194-Ponceau-Deauville.csv  00-RGL-1195-Travaux-de-pavage-rue-du-Manege.csv  00-Reglement-1000-2008-PPC.csv  00-Reglement-1192-Conception-plans-et-devis-Relocalisation-aqueduc-Mont-Gabriel.csv  00-Reglement-1196-Achat-camion-d-incendie-autopompe.csv  00-Reglement-1233-Comite-du-patrimoine-VF.csv  10.1R-Projet-rgl-1000-2008-PPC-2-AM.csv  10.2R-Projet-rgl-1220-1-AM.csv  10.3R-Projet-rgl-SQ-2023-AM.csv  1140-2010-Creation-du-CCE.csv  1314-2021-C-envigueur-20230317.csv  2013-12-16-Reglement-1186-Compteurs-d-eau.csv  2014-01-20-Reglement-1188-Conception-plans-et-devis-Etangs-aeres-Mont-Gabriel.csv  2014-02-26-Reglement-1189-Delegation-au-tresorier-pouvoir-d-accorder-le-contrat-de-financement.csv  2014-07-07-Reglement-1198-PRR-2014-Travaux-diverses-rues.csv  2014-10-01-Reglement-1199-APRIA.csv  2014-12-15-Reglement-1204-v3-Camion-aqueduc-Seraphin.csv  2015-02-16-Reglement-1209-Aide-financiere-a-des-fins-industrielles-pour-2015.csv  2015-02-16-Reglement-1210-PRR-2015.csv  2015-03-16-Reglement-1211-automatisation-aqueduc.csv  2015-03-16-Reglement-1212-Travaux-Station-surpression-relocalisation-Mt-Gabriel.csv  2015-03-16-Reglement-1214-Plans-et-devis-Station-surpression-Souchets_1.csv  2015-03-16-Reglement-1215-Plans-et-devis-Aqueduc-Deauville-Souchets-VF_1.csv  2015-03-16-Reglement-1216-Plans-et-devis-Aqueduc-Rolland-Dube-Val-Montreux-VF.csv  2015-03-16-Reglement-1217-Plans-et-devis-egout-Habitat-Paysan-VF.csv  2015-03-16-Reglement-1218-Plans-et-devis-Aqueduc-egout-Notre-Dame-VF.csv  2015-04-20-Reglement-1220-Matieres-residuelles-VF_2.csv  2015-06-20-Reglement-1223-circulation-des-vehicules-lourds-et-ANNEXES.csv  2016-02-10-Reglement-1228-Plans-et-devis-Egouts-pluviaux.csv  2016-04-27-Reglement-1202-Engrais-et-pesticides-COMPILATION-ADMINISTRATIVE.csv  2016-11-18-Reglement-1240-Reconstruction-conduites-interception-Usine.csv  2016-11-21-Reglement-1237-et-annexes-Travaux-Station-surpression-Souchets.csv  2017-04-18-Reglement-1243-Plans-et-devis-Garage-municipal-VF.csv  2017-04-18-Reglement-1245-Travaux-Bourg-du-Lac-VF_1.csv  (+159 more)
data/dev/: Rgl-1314-2021-DM-Derogations-mineures.csv
data/dev-title/: Rgl-1314-2021-DM-Derogations-mineures.csv  Rgl-1314-2021-PC-version-en-vigueur-20230509.csv
data/patches/: annexes_patch1.csv  construction_articles.csv  construction_chapitres.csv  demolition_articles.csv  demolition_page3.csv  permis_articles.csv  permis_sous_sections.csv  plan_patch1.csv  prevost_ccu_patch1.csv  prevost_t10_patch1.csv  prevost_t1_patch1.csv  prevost_t8_patch1.csv  prevost_t9_patch1.csv  pu_patch1.csv  pu_patch2.csv  pu_patch3.csv  pu_patch4.csv  u51_patch2.csv  u51_patch3.csv  u53_patch1.csv  u53_patch3.csv  vsadm_u51_patch1.csv  vsadm_u51_patch4.csv  vsadm_u53_patch2.csv  vsadm_u58_patch1.csv  vss_cond_patch1.csv  vss_conditions_patch1.csv  vss_dem_patch1.csv  vss_piia_patch1.csv  (+6 more)
notebooks/: PyTorch.ipynb  RNN FastText.ipynb  RNN PyTorch.ipynb
results/: .gitignore  README.md  layout-x4.csv  layout5-x4.csv  layoutlmscores.csv  rnn-pretrain-feats-128-64-2-rerun.csv  rnn-pretrain-feats-128-64-2.csv  rnn-pretrain-feats-128-64-rerun.csv  rnn-pretrain-feats-128-64.csv  rnn-pretrain-feats-160-rerun.csv  rnn-pretrain-feats-160.csv  rnn-pretrain-feats-rerun.csv  rnn-pretrain-feats.csv  rnncrffreezealltrans.csv  rnncrffreezealltrans1.csv  rnncrfpatches.txt  rnncrfscores.csv  rnnpatches.txt  rnnscores-0ed5d58.csv  rnnscores-163cba1.csv  rnnscores-30.csv  rnnscores-40.csv  rnnscores-45.csv  rnnscores-50.csv  rnnscores-59464ad.csv  rnnscores-6094af7.csv  rnnscores-615ce0a.csv  rnnscores-7bf8370.csv  rnnscores-977e09a.csv  rnnscores-9ae6742.csv  rnnscores-9f23f46.csv  rnnscores-best-rnn-10.csv  rnnscores-best-rnn-labelcounts.csv  rnnscores-best-rnn.csv  rnnscores-bonly.csv  rnnscores-d061594.csv  rnnscores-dc3679c.csv  rnnscores-gru.csv  rnnscores-linefeats.csv  rnnscores-notext.csv  (+21 more)
scripts/: add_object_column.py  check_tags.py  comparables.sh  convert.py  convert.sh  convert_to_doclaynet.py  download.sh  download_legisquebec.py  eval_on_doclaynet.py  explain_crf.py  extract.sh  extract_legisquebec.py  format.sh  grid_search.sh  make_funsd_data.py  pdf2xml.py  pdfstructure.py  problem_pages.sh  process_legisquebec.py  retag_tab.py  retokenize.py  retrain.sh  test_crf.py  test_crf_seq.py  test_crf_voting.py  test_labels.py  test_rnn.py  test_rnn_crf.py  test_rnn_voting.py  title_pages.py  train_crf.py  train_crf_seq.py  train_layoutlm.py  train_pretrain.sh  train_rnn.py  train_rnn_crf.py
test/: test_analyse.py  test_convert.py  test_extract.py  test_format.py  test_label.py  test_link.py  test_recognize.py  test_segment.py  test_urbanisme.py
tests/: test_urbanisme.py
yolo/: yolo.py
(+75 files in other folders)
