[metadata]
name = alexi
version = 0.0.1
author = David Huggins-Daines
author_email = district6@vdsa.ca
description = "ALexi, EXtracteur d'Information adélois"
long_description = file:README.md
license = MIT

[options]
install_requires =
    pydantic
    beautifulsoup4
    lxml
    pdfplumber
    tqdm
    poutyne
    scikit-learn
packages = alexi

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
