[metadata]
name = alexi
version = 0.0.2
author = David Huggins-Daines
author_email = district6@vdsa.ca
description = "ALexi, EXtracteur d'Information adélois"
long_description = file:README.md
license = MIT

[options]
install_requires =
    pydantic
    pandas
    beautifulsoup4
    lxml
    pdfplumber
    tqdm
    scikit-learn
packages = alexi

[options.entry_points]
console_scripts =
	  alexi = alexi:main

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
